--- a/TestApp/ClientApp/app/components/app/app.component.html
+++ b/TestApp/ClientApp/app/components/app/app.component.html
@@ -4,7 +4,7 @@
             <nav-menu></nav-menu>
         </div>
         <div class='col-sm-9 body-content'>
-            <router-outlet class="fadeStyle"></router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
