List Items from Feature Components

--- a/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
+++ b/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
@@ -1,7 +1,7 @@
 <div class='fadeStyle'>
     <ul>
         <li *ngFor="let monster of monsters">
-            <div>Name: {{ monster.name }}</div>
+            <div>Name: {{ monster.id }}</div>
             <div>Id: {{ monster.id }}</div>
             <div>Stats:</div>
         </li>
