Loading MonsterDetails into Component

--- a/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
+++ b/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
@@ -1,8 +1,8 @@
 <div class='fadeStyle'>
     <ul>
-        <li *ngFor="let monster of monsters">
-            <div>Name: {{ monster.id }}</div>
-            <div>Id: {{ monster.id }}</div>
+        <li *ngFor="let monsterDetail of monsterDetails">
+            <div>Name: {{ monsterDetail.name }}</div>
+            <div>Id: {{ monsterDetail.id }}</div>
             <div>Stats:</div>
         </li>
     </ul>
