Loading Monster Images

--- a/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
+++ b/TestApp/ClientApp/app/components/monster-library/monster-detail.component.html
@@ -4,6 +4,7 @@
             <div>Name: {{ monsterDetail.name }}</div>
             <div>Id: {{ monsterDetail.id }}</div>
             <div>Stats:</div>
+            <img [src]="loadImage(monsterDetail.id)"/>
         </li>
     </ul>
 </div>
